--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,13 +1,13 @@
 {% set name = "dataprep" %}
-{% set version = "0.2.14" %}
+{% set version = "0.2.15" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 93da9be3a2efdb0d4c2937c845c43135b9215bd9760f66b06b0134d8751c1b7f
+  url: "https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz"
+  sha256: 2be083a24ffb8406fcf16825dceb98bc83c2f5adef7b153e820817ea250cdc7d
 
 build:
   noarch: python
@@ -17,43 +17,41 @@ build:
 requirements:
   build:
     - pip
-    - python
+    - python >=3.6
     - poetry >=1
   run:
-    - aiohttp >=3.6.2,<4.0.0
-    - bokeh >=2.0,<2.1
-    - bottleneck >=1.3.2,<2.0.0
-    - dask >=2.25,<2.26
+    - aiohttp >=3.6,<4.0.0
+    - bokeh >=2.0,<3
+    - bottleneck >=1.3,<2.0
+    - dask >=2.25,<3
     - cloudpickle >=0.2.2
     - fsspec >=0.6.0
     - toolz >=0.8.2
-    - ipywidgets >=7.5.1,<8.0.0
-    - ipython >=5.4.0
-    - jinja2 >=2.11,<2.12
-    - jsonpath-ng >=1.5.1,<2.0.0
-    - nltk >=3.4.4,<4.0
-    - numpy >=1.19,<1.20
-    - pandas >=1.0,<1.1
     - partd >=0.3.10
-    - pillow >=7.1.2,<8.0.0
-    - pydantic >=1.6.1,<2.0.0
-    - python
     - pyyaml
-    - regex >=2020.10.15,<2020.11.0
-    - requests >=2.24,<2.25
-    - scipy >=1.5,<1.6
-    - tornado ==5.0.2
-    - tqdm >=4.48,<4.49
-    - wordcloud >=1.8,<1.9
+    - toolz >=0.8.2
+    - ipywidgets >=7.5,<8.0
+    - jinja2 >=2.11,<3.0
+    - jsonpath-ng >=1.5,<2.0
+    - nltk >=3.4,<4.0
+    - numpy >=1.13.0,<2
+    - pandas >=1,<2
+    - pydantic >=1.6,<2.0
+    - python >=3.6
+    - regex >=2020.10.15,<2021.0.0
+    - scipy >=1,<2
+    - tqdm >=4.48,<5.0
+    - wordcloud >=1.8,<2.0
 
 test:
   imports:
     - dataprep
     - dataprep.assets
+    - dataprep.clean
     - dataprep.connector
     - dataprep.connector.generator
     - dataprep.connector.schema
-    - dataprep.clean
+    - dataprep.datasets
     - dataprep.eda
     - dataprep.eda.basic
     - dataprep.eda.correlation
