--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -2,8 +2,8 @@
 {% set version = "0.4.1" %}
 
 package:
-  name: {{ name|lower }}
-  version: {{ version }}
+  name: "{{ name|lower }}"
+  version: "{{ version }}"
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
@@ -12,7 +12,7 @@ source:
 build:
   noarch: python
   number: 0
-  script: {{ PYTHON }} -m pip install . -vv
+  script: "{{ PYTHON }} -m pip install . -vv"
 
 requirements:
   host:
@@ -20,28 +20,33 @@ requirements:
     - python >=3.6
     - poetry >=1
   run:
-    - aiohttp >=3.6,<4.0.0
-    - bokeh >=2.0,<3
-    - bottleneck >=1.3,<2.0
-    - dask >=2.25,<3
-    - cloudpickle >=0.2.2
-    - fsspec >=0.6.0
-    - toolz >=0.8.2
-    - partd >=0.3.10
-    - pyyaml
-    - toolz >=0.8.2
-    - ipywidgets >=7.5,<8.0
-    - jinja2 >=2.11,<3.0
-    - jsonpath-ng >=1.5,<2.0
-    - nltk >=3.4,<4.0
-    - numpy >=1.13.0,<2
-    - pandas >=1,<2
-    - pydantic >=1.6,<2.0
     - python >=3.6
-    - regex >=2020.10.15,<2021.0.0
+    - bokeh >=2,<3
+    - bottleneck >=1.3,<2
+    - dask >=2021.11,<2022
+    - nltk >=3.5,<4
+    - numpy >=1.21,<2
+    - pandas >=1.1,<2
     - scipy >=1,<2
-    - tqdm >=4.48,<5.0
-    - wordcloud >=1.8,<2.0
+    - wordcloud >=1.8,<2
+
+    # Dependencies for Connector
+    - aiohttp >=3.6,<4
+    - ipywidgets >=7.5,<8
+    - jinja2 >=2.11,<3
+    - jsonpath-ng >=1.5,<2
+    - pydantic >=1.6,<2
+    - tqdm >=4.48,<5
+
+    # Dependencies for Clean
+    - flask >=1.1,<2
+    - flask_cors >=3,<4
+    - python-levenshtein >=0.12,<0.13
+    - metaphone >=0.6,<0.7
+    - python-stdnum >=1.16,<2
+    - regex >=2021,<2022
+    - usaddress >=0.5.10,<0.6
+    - varname >=0.8.1,<0.9
 
 test:
   imports:
@@ -61,12 +66,12 @@ test:
 
 
 about:
-  home: https://github.com/sfu-db/dataprep
+  home: https://dataprep.ai
   license: MIT
   license_family: MIT
   license_file: LICENSE
   summary: 'Dataprep: Data Preparation in Python'
-  doc_url: https://sfu-db.github.io/dataprep/
+  doc_url: https://docs.dataprep.ai
   dev_url: https://github.com/sfu-db/dataprep
 
 extra:
