--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,7 +23,7 @@ requirements:
     - aiohttp >=3.6,<4.0.0
     - bokeh >=2.0,<3
     - bottleneck >=1.3,<2.0
-    - dask >=2.25,<3
+    - dask >=2021.11
     - cloudpickle >=0.2.2
     - fsspec >=0.6.0
     - toolz >=0.8.2
@@ -31,17 +31,25 @@ requirements:
     - pyyaml
     - toolz >=0.8.2
     - ipywidgets >=7.5,<8.0
-    - jinja2 >=2.11,<3.0
+    - jinja2 >=3,<4.0
     - jsonpath-ng >=1.5,<2.0
-    - nltk >=3.4,<4.0
-    - numpy >=1.13.0,<2
-    - pandas >=1,<2
+    - nltk >=3.6.7,<4.0
+    - numpy >=1.21,<2
+    - pandas >=1.1,<2
     - pydantic >=1.6,<2.0
     - python >=3.6
-    - regex >=2020.10.15,<2021.0.0
     - scipy >=1,<2
     - tqdm >=4.48,<5.0
     - wordcloud >=1.8,<2.0
+
+    - regex >=2021.8.3
+    - flask >=2,<3
+    - flask_cors >=3,<4
+    - levenshtein >=0.16
+    - metaphone >=0.6
+    - python-crfsuite >=0.9.7
+    - python-stdnum >=1.16
+    - varname >=0.8.1
 
 test:
   imports:
