--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "dataprep" %}
-{% set version = "0.4.2" %}
+{% set version = "0.4.3a1" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 0f12cafb4ca7dc4e8cc89c659315dc2bba6833807500ad4a252af542143d697c
+  # sha256: 0f12cafb4ca7dc4e8cc89c659315dc2bba6833807500ad4a252af542143d697c
 
 build:
   noarch: python
@@ -45,7 +45,7 @@ requirements:
     - regex >=2021.8.3
     - flask >=2,<3
     - flask_cors >=3,<4
-    - levenshtein >=0.16
+    - python-levenshtein >=0.12
     - metaphone >=0.6
     - python-crfsuite >=0.9.7
     - python-stdnum >=1.16
@@ -61,11 +61,13 @@ test:
     - dataprep.connector.schema
     - dataprep.datasets
     - dataprep.eda
-    - dataprep.eda.basic
     - dataprep.eda.correlation
+    - dataprep.eda.create_diff_report
     - dataprep.eda.create_report
+    - dataprep.eda.diff
     - dataprep.eda.distribution
     - dataprep.eda.missing
+    - dataprep.eda.outlier
 
 
 about:
